overflow issue fixed

--- a/src/components/TradingPage/MyInformation/styles.less
+++ b/src/components/TradingPage/MyInformation/styles.less
@@ -38,6 +38,7 @@
     @media screen and (max-width: 768px) {
       padding: 0 20px;
       overflow-x: auto !important;
+      overflow-y: hidden;
       width: auto !important;
     }
 
